--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ html{
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-
+	position: relative;
 }
 
 .logo{
@@ -37,6 +37,8 @@ html{
 .projet-etudiant-paragraph{
 	font-size: 1.2rem;
 	color: #c2c2c2;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
 }
 
 .made-by{
@@ -44,14 +46,17 @@ html{
 }
 
 .intro-container{
-	width: 70%;
+	width: 80%;
 	display: flex;
 	justify-content: flex-end;
+	margin-top: 12vh;
 }
 
 .intro-content-container{
-	border: solid 2px red;
 	width: 50%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 h1{
@@ -59,19 +64,76 @@ h1{
 	color: #fefefe;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 900;
+	line-height: .9;
+	width: 100%;
 }
 
 .enquete{
-	font-size: 1.5rem;
-	color: #707070;
+	font-size: 1.2rem;
+	color: #c4c4c4;
 	border-top: solid 1px #545454;
 	border-bottom: solid 1px #545454;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	width: 100%;
 }
 
 .intro-paragraph{
 	color: #919191;
+	font-size: 1.2rem;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
+}
+
+.link-container{
+	width: 100%;
+	display: flex;
+	align-items: flex-start;
+	margin-top: 3rem;
+}
+
+
+.commencer-link{
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	border: 1px solid #fefefe;
+	border-radius: 25px;
+	padding: 1rem 2rem;
+	color: #fefefe;
+	text-decoration: none;
+	font-size: 1.5rem;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
+	height: 100%;
+	width: 28%;
+}
+
+.commencer-link img{
+	height: 70%;
+}
+
+.autres-projets{
+	position: absolute;
+	width: 100%;
+	height: 15vh;
+	bottom: 0;
+	left: 0;
+	border-top: solid 1px #303030;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	color: #fefefe;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 500;
 	font-size: 1.5rem;
 }
+
+
 
 .container{
 	display: -webkit-flex;
