--- a/style.css
+++ b/style.css
@@ -151,7 +151,9 @@ h1{
 }
 
 #player{
-	width: 80%;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 	/* display: none; */
 }
 
@@ -159,8 +161,8 @@ h1{
 .choice-container{
 	position: absolute;
 	background-color: rgba(255,255,255,.5);
-	width: 80%;
-	height: 80%;
+	width: 100%;
+	height: 100%;
 	display: none;
 	flex-wrap: wrap;
 	
@@ -168,12 +170,22 @@ h1{
 
 .choice{
 	flex: 1;
-	background-color:red;
+	background-color:rgba(0,0,0,.8);
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	border: 2px solid #000;
 	cursor: pointer;
+	color: #fefefe;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 900;
+	font-size: 4rem;
+	text-align: center;
+	transition: .4s;
+}
+
+.choice:hover{
+	background-color:rgba(0,0,0,.9);	
 }
 
 #choix{
