--- a/style.css
+++ b/style.css
@@ -113,6 +113,27 @@ h1{
 	width: 28%;
 }
 
+.denoncer{
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	border: 1px solid #fefefe;
+	border-radius: 25px;
+	padding: 1rem 2rem;
+	color: #fefefe;
+	text-decoration: none;
+	font-size: 1.5rem;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	margin-bottom: 4vh;
+	margin-left: 4vh;
+	width: 170px;
+	z-index: 5;
+}
+
 .commencer-link img{
 	height: 70%;
 }
@@ -192,15 +213,59 @@ h1{
 	color: #fff;
 }
 
+.choice1{
+	grid-area: choice1;
+}.choice2{
+	grid-area: choice2;
+}.choice3{
+	grid-area: choice3;
+}.choice4{
+	grid-area: choice4;
+}.choice5{
+	grid-area: choice5;
+}.choice6{
+	grid-area: choice6;
+}.choice7{
+	grid-area: choice7;
+}.choice8{
+	grid-area: choice8;
+}
+
 .denoncer-container{
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100vh;
+	display: none;
+	grid-template-areas:
+		'choice1 choice2 choice3 choice4'
+		'choice5 choice6 choice7 choice8';
+	color: #fefefe;
+	z-index: 6;
+	  
+}
+
+.denoncer-container.active{
+	display: grid;
+}
+
+.different-choice{
 	display: flex;
-	flex-direction: column;
 	align-items: center;
-	justify-content: space-evenly;
-	background-color: rgba(255,255,255,.5);
+	justify-content: center;
+	background-color: rgba(0,0,0,.6);
+	transition: .4s;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 900;
+	font-size: 3rem;
+}
+
+.different-choice img{
+	width: 10%;
+	margin-right: 1rem;
+}
+
+.different-choice:hover{
+	background-color: rgba(0,0,0,.8);
 }
