--- a/style.css
+++ b/style.css
@@ -1,194 +1,263 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
-
-
-
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: 'Roboto', sans-serif;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 }
 
-html{
-	font-size: 62.5%;
+html {
+    font-size: 62.5%;
 }
 
-.accueil-container{
-	width: 100%;
-	height: 100vh;
-	background-image: url(img/bg.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	position: relative;
+.accueil-container {
+    width: 100%;
+    height: 100vh;
+    background-image: url(img/bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
 }
 
-.logo{
-	position: absolute;
-	top: 0;
-	left: 0;
-	margin-top: 2vh;
-	margin-left: 2vh;
-	height: 50px;
+.logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 2vh;
+    margin-left: 2vh;
+    height: 50px;
 }
 
-.projet-etudiant-paragraph{
-	font-size: 1.2rem;
-	color: #c2c2c2;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 400;
+.projet-etudiant-paragraph {
+    font-size: 1.2rem;
+    color: #c2c2c2;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
 
-.made-by{
-	margin-top: 4vh;
+.made-by {
+    margin-top: 4vh;
 }
 
-.intro-container{
-	width: 80%;
-	display: flex;
-	justify-content: flex-end;
-	margin-top: 12vh;
+.intro-container {
+    width: 80%;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 12vh;
 }
 
-.intro-content-container{
-	width: 50%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+.intro-content-container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-h1{
-	font-size: 7rem;
-	color: #fefefe;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 900;
-	line-height: .9;
-	width: 100%;
+h1 {
+    font-size: 7rem;
+    color: #fefefe;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    line-height: .9;
+    width: 100%;
 }
 
-.enquete{
-	font-size: 1.2rem;
-	color: #c4c4c4;
-	border-top: solid 1px #545454;
-	border-bottom: solid 1px #545454;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 400;
-	padding-top: 2rem;
-	padding-bottom: 2rem;
-	margin-top: 1rem;
-	margin-bottom: 1rem;
-	width: 100%;
+.enquete {
+    font-size: 1.2rem;
+    color: #c4c4c4;
+    border-top: solid 1px #545454;
+    border-bottom: solid 1px #545454;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    width: 100%;
 }
 
-.intro-paragraph{
-	color: #919191;
-	font-size: 1.2rem;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 400;
+.intro-paragraph {
+    color: #919191;
+    font-size: 1.2rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
 
-.link-container{
-	width: 100%;
-	display: flex;
-	align-items: flex-start;
-	margin-top: 3rem;
+.link-container {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    margin-top: 3rem;
 }
 
-
-.commencer-link{
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	border: 1px solid #fefefe;
-	border-radius: 25px;
-	padding: 1rem 2rem;
-	color: #fefefe;
-	text-decoration: none;
-	font-size: 1.5rem;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 400;
-	height: 100%;
-	width: 28%;
+.commencer-link {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: 1px solid #fefefe;
+    border-radius: 25px;
+    padding: 1rem 2rem;
+    color: #fefefe;
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    height: 100%;
+    width: 28%;
 }
 
-.commencer-link img{
-	height: 70%;
+.commencer-link img {
+    height: 70%;
 }
 
-.autres-projets{
-	position: absolute;
-	width: 100%;
-	height: 15vh;
-	bottom: 0;
-	left: 0;
-	border-top: solid 1px #303030;
-	display: flex;
-	align-items: center;
-	justify-content: space-evenly;
-	color: #fefefe;
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 500;
-	font-size: 1.5rem;
+.autres-projets {
+    position: absolute;
+    width: 100%;
+    height: 15vh;
+    bottom: 0;
+    left: 0;
+    border-top: solid 1px #303030;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    color: #fefefe;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 1.5rem;
 }
 
-
-
-.container{
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	height: 100vh;
-	width: 100%;
-	background-color: #fff;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	position: relative;
+.container {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    background-color: #fff;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
 }
 
-#player{
-	width: 80%;
-	/* display: none; */
+#player {
+    width: 80%;
+    /* display: none; */
 }
 
-
-.choice-container{
-	position: absolute;
-	background-color: rgba(255,255,255,.5);
-	width: 80%;
-	height: 80%;
-	display: none;
-	flex-wrap: wrap;
-	
+.choice-container {
+    position: absolute;
+    background-color: rgba(255, 255, 255, .5);
+    width: 80%;
+    height: 80%;
+    display: none;
+    flex-wrap: wrap;
 }
 
-.choice{
-	flex: 1;
-	background-color:red;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border: 2px solid #000;
-	cursor: pointer;
+.choice {
+    flex: 1;
+    background-color: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid #000;
+    cursor: pointer;
 }
 
-#choix{
-	color: #fff;
+#choix {
+    color: #fff;
 }
 
-.denoncer-container{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-evenly;
-	background-color: rgba(255,255,255,.5);
+.denoncer-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: rgba(255, 255, 255, .5);
+}
+
+@media screen and (max-width: 950px) {
+    .logo {
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin-top: 2vh;
+        margin-left: 2vh;
+        height: 90px;
+    }
+    .accueil-container {
+        width: 100%;
+        height: 100vh;
+        background-image: url(img/bg.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        position: relative;
+    }
+    .made-by {
+        margin-top: 9vh;
+    }
+    .projet-etudiant-paragraph {
+        text-align: center;
+        width: 900px;
+        font-size: 3rem;
+        color: #c2c2c2;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+    }
+    .enquete {
+        font-size: 3rem;
+        color: #c4c4c4;
+        border-top: solid 1px #545454;
+        border-bottom: solid 1px #545454;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        width: 100%;
+    }
+    .intro-paragraph {
+        color: #919191;
+        font-size: 3rem;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+    }
+    .autres-projets>p {
+        font-size: 30px;
+    }
+    .autres-projets>a {
+        font-size: 30px;
+    }
+    .commencer-link {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        border: 1px solid #fefefe;
+        border-radius: 25px;
+        padding: 1rem 2rem;
+        color: #fefefe;
+        text-decoration: none;
+        font-size: 3rem;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+        height: 100%;
+        width: 80%;
+    }
+    .commencer-link img {
+        height: 40px;
+    }
 }
