--- a/style.css
+++ b/style.css
@@ -172,91 +172,6 @@ h1 {
     color: #fff;
 }
 
-
-@media screen and (max-width: 950px) {
-    .logo {
-        position: absolute;
-        top: 0;
-        left: 0;
-        margin-top: 2vh;
-        margin-left: 2vh;
-        height: 60px;
-    }
-    .accueil-container {
-        width: 100%;
-        height: 100vh;
-        background-image: url(img/bg.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        position: relative;
-    }
-    .made-by {
-        margin-top: 12vh;
-    }
-    .enquete {
-        font-size: 1.2rem;
-        color: #c4c4c4;
-        border-top: solid 1px #545454;
-        border-bottom: solid 1px #545454;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 400;
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-        width: 100%;
-    }
-    .intro-paragraph {
-        color: #919191;
-        font-size: 1.2rem;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 400;
-    }
-    .commencer-link {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        border: 1px solid #fefefe;
-        border-radius: 25px;
-        padding: 1rem 2rem;
-        color: #fefefe;
-        text-decoration: none;
-        font-size: 1.2rem;
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 400;
-        height: 100%;
-        width: 60%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .commencer-link img {
-        height: 30px;
-    }
-    .projet-etudiant-paragraph {
-        text-align: center;
-    }
-    .intro-container {
-        width: 80%;
-        display: flex;
-        justify-content: center;
-        margin-top: 3vh;
-    }
-    .intro-content-container {
-        width: 80%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .intro-content-container>h1 {
-        text-align: center;
-        font-size: 4rem;
-    }
-}
-
 .link-container {
     width: 100%;
     display: flex;
@@ -448,4 +363,125 @@ h1 {
 
 .different-choice:hover {
     background-color: rgba(0, 0, 0, .8);
+}
+
+@media screen and (max-width: 950px) {
+    .logo {
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin-top: 2vh;
+        margin-left: 2vh;
+        height: 60px;
+    }
+    .accueil-container {
+        width: 100%;
+        height: 100vh;
+        background-image: url(img/bg.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        position: relative;
+    }
+    .made-by {
+        margin-top: 12vh;
+    }
+    .enquete {
+        font-size: 1.2rem;
+        color: #c4c4c4;
+        border-top: solid 1px #545454;
+        border-bottom: solid 1px #545454;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+        width: 100%;
+    }
+    .intro-paragraph {
+        color: #919191;
+        font-size: 1.2rem;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+    }
+    .commencer-link {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        border: 1px solid #fefefe;
+        border-radius: 25px;
+        padding: 1rem 2rem;
+        color: #fefefe;
+        text-decoration: none;
+        font-size: 1.2rem;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+        height: 100%;
+        width: 60%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .commencer-link img {
+        height: 30px;
+    }
+    .projet-etudiant-paragraph {
+        text-align: center;
+    }
+    .intro-container {
+        width: 80%;
+        display: flex;
+        justify-content: center;
+        margin-top: 3vh;
+    }
+    .intro-content-container {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .intro-content-container>h1 {
+        text-align: center;
+        font-size: 4rem;
+    }
+    .denoncer-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        display: none;
+        grid-template-areas: 'choice1 choice2' 'choice3 choice4' 'choice5 choice6' 'choice7 choice8';
+        color: #fefefe;
+        z-index: 6;
+    }
+    .choice {
+        flex: 1;
+        background-color: rgba(0, 0, 0, .8);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid #000;
+        cursor: pointer;
+        color: #fefefe;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 600;
+        font-size: 3.5rem;
+        text-align: center;
+        transition: .4s;
+    }
+    .different-choice {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgba(0, 0, 0, .6);
+        transition: .4s;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 900;
+        font-size: 2rem;
+        cursor: pointer;
+    }
 }
