--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ h1 {
     transition: .4s;
 }
 
-.commencer-link::before{
+.commencer-link::before {
     content: '';
     position: absolute;
     top: 0;
@@ -125,11 +125,11 @@ h1 {
     transition: .4s;
 }
 
-.commencer-link:hover{
+.commencer-link:hover {
     color: #000;
 }
 
-.commencer-link:hover::before{
+.commencer-link:hover::before {
     width: 100%;
 }
 
@@ -178,8 +178,6 @@ h1 {
     width: 80%;
     /* display: none; */
 }
-
-
 
 .choice {
     flex: 1;
@@ -243,11 +241,11 @@ h1 {
     transition: .4s;
 }
 
-.denoncer img{
+.denoncer img {
     transition: .2s ease;
 }
 
-.denoncer::before{
+.denoncer::before {
     content: '';
     position: absolute;
     top: 0;
@@ -259,14 +257,15 @@ h1 {
     transition: .4s;
 }
 
-.denoncer:hover::before{
+.denoncer:hover::before {
     width: 100%;
 }
-.denoncer:hover img{
+
+.denoncer:hover img {
     transform: rotate(150deg);
 }
 
-.denoncer:hover{
+.denoncer:hover {
     color: #000;
 }
 
@@ -290,7 +289,6 @@ h1 {
     font-size: 1.5rem;
 }
 
-
 #player {
     width: 100%;
     height: 100%;
@@ -309,7 +307,7 @@ h1 {
     transition: .4s;
 }
 
-.choice-container.active{
+.choice-container.active {
     transform: translateY(0);
 }
 
@@ -379,13 +377,11 @@ h1 {
     grid-template-areas: 'choice1 choice2 choice3 choice4' 'choice5 choice6 choice7 choice8';
     color: #fefefe;
     z-index: 6;
-    
     transform: translateY(-100vh);
     transition: .4s;
 }
 
 .denoncer-container.active {
-    
     transform: translateY(0);
 }
 
@@ -414,12 +410,11 @@ h1 {
     background-color: rgba(0, 0, 0, .8);
 }
 
-
-.pause{
+.pause {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     display: flex;
     width: 8%;
     justify-content: space-between;
@@ -428,12 +423,11 @@ h1 {
     transition: .4s;
 }
 
-
-.pause.active{
+.pause.active {
     opacity: .5;
 }
 
-.pause div{
+.pause div {
     height: 20vh;
     width: 2vw;
     background-color: #fff;
@@ -558,5 +552,11 @@ h1 {
         font-weight: 900;
         font-size: 2rem;
         cursor: pointer;
+    }
+    #player {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        /* display: none; */
     }
 }
