--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ h1 {
     display: -moz-flex;
     display: -ms-flex;
     display: -o-flex;
-    display: flex;
+    display: none;
     height: 100vh;
     width: 100%;
     background-color: #fff;
@@ -211,6 +211,7 @@ h1 {
     justify-content: center;
     border: 2px solid #000;
     cursor: pointer;
+    padding: 3rem;
 }
 
 #choix {
@@ -238,6 +239,7 @@ h1 {
     font-weight: 400;
     height: 100%;
     width: 28%;
+    background-color: transparent;
 }
 
 .denoncer {
